syntax = "proto3";

package accounts;

option go_package = "grpcGW.accounts";

service Accounts {
    rpc GetAccounts(GetAccountsRequest) returns (GetAccountsResponse);
    rpc SetAccount(SetAccountRequest) returns (SetAccountResponse);
}

message GetAccountsRequest {}
message GetAccountsResponse {
    repeated string AccountId = 1;
}

message SetAccountRequest {
    string AccountId = 1;
}

message SetAccountResponse {}