syntax = "proto3";

package auth;

option go_package = "contracts.auth";

service Auth {
    rpc SetToken(SetTokenRequest) returns (SetTokenResponse);
    rpc ClearToken(ClearTokenRequest) returns (ClearTokenResponse);
    rpc HasToken(HasTokenRequest) returns (HasTokenResponse);
}

message SetTokenRequest {
    string Token = 1;
    bool IsSandbox = 2;
}
message SetTokenResponse {}

message ClearTokenRequest {
    bool ForSandbox = 1;
}
message ClearTokenResponse {}

message HasTokenRequest {}
message HasTokenResponse {
    bool HasToken = 1;
}